Tratativas de Excessões e Implementação de Impressão

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <title>Fina Massa</title>
   </head>
   <body>
+    <script>
+      if(location.protocol !== 'https:'){
+        //const httpsURL = 'https://'+location.href.split('//')[1]
+        //location.replace(httpsURL)
+      }
+    </script>
     <div id="root"></div>
   </body>
 </html>
