Fix para produção

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <body>
     <script>
       if(location.protocol !== 'https:'){
-        //const httpsURL = 'https://'+location.href.split('//')[1]
-        //location.replace(httpsURL)
+        const httpsURL = 'https://'+location.href.split('//')[1]
+        location.replace(httpsURL)
       }
     </script>
     <div id="root"></div>
