Implementação de component Switch

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script>
       if(location.protocol !== 'https:'){
         const httpsURL = 'https://'+location.href.split('//')[1]
-        location.replace(httpsURL)
+        //location.replace(httpsURL)
       }
     </script>
     <div id="root"></div>
